--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,38 @@
 *.xcf filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.kra filter=lfs diff=lfs merge=lfs -text
+
+# Additional binary formats
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.bmp binary
+*.tiff binary
+*.ico binary
+*.exe binary
+*.dll binary
+*.so binary
+*.pdf binary
+*.zip binary
+*.tar binary
+*.gz binary
+*.7z binary
+*.rar binary
+*.mp3 binary
+*.wav binary
+*.flac binary
+*.mp4 binary
+*.mov binary
+*.avi binary
+*.mkv binary
+*.webm binary
+*.ogg binary
+*.obj binary
+*.fbx binary
+*.stl binary
+*.3ds binary
+*.dae binary
+*.glb binary
+*.gltf binary
+*.bin binary
